unpackaged/main/default/objects/Mesure__c/Mesure__c.object-meta.xml
<CustomObject>
    <label>Mesure</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Mesure</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mesures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>