unpackaged/main/default/objects/Mesure__c/fields/DATE_DE_MESURE_TIME__c.field-meta.xml
<CustomField>
    <fullName>DATE_DE_MESURE_TIME__c</fullName>
    <label>DATE DE MESURE TIME</label>
    <type>DateTime</type>
</CustomField>