unpackaged/main/default/objects/Mesure__c/fields/Dossier_de_soins_del__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins_del__c</fullName>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Mesures</relationshipLabel>
    <relationshipName>Mesures_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>