unpackaged/main/default/objects/Mesure__c/fields/Type_de_la_mesure__c.field-meta.xml
<CustomField>
    <fullName>Type_de_la_mesure__c</fullName>
    <label>Type de la mesure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poids (kg)</fullName>
            </value>
            <value>
                <fullName>Tension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>