unpackaged/main/default/objects/Mesure__c/fields/Valeur_mesuree__c.field-meta.xml
<CustomField>
    <fullName>Valeur_mesuree__c</fullName>
    <label>Valeur mésurée</label>
    <length>30</length>
    <type>Text</type>
</CustomField>