unpackaged/main/default/objects/Mesure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_de_la_mesure__c</columns>
    <columns>Dossier_de_soins_del__c</columns>
    <columns>Valeur_mesuree__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>